testdata/errors/typo_config.ral
configg { xlen, }

register foo: @xlen { a: 32 }
